--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "BSD",
   "dependencies": {
     "express": "~3.4.7"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.8.0"
   }
 }
