--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-mocha-test": "~0.8.1",
-    "blanket": "~1.1.6"
+    "blanket": "~1.1.6",
+    "supertest": "~0.8.2"
   }
 }
