--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Poleland",
   "version": "0.0.0",
   "description": "A site for managing polls",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
