--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Jeffrey Charles <jeffreycharles@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "express": "~3.4.7"
+    "express": "~3.4.7",
+    "tv4": "~1.0.15"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
