--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -10,7 +10,7 @@
       notify:
         - restart nginx
     - name: Add Poleland site to available-sites
-      copy: src=provisioning/templates/poleland dest=/etc/nginx/sites-available/poleland owner=root group=root mode=0644
+      copy: src=files/poleland dest=/etc/nginx/sites-available/poleland owner=root group=root mode=0644
     - name: Enable Poland site
       file: src=/etc/nginx/sites-available/poleland dest=/etc/nginx/sites-enabled/poleland owner=root group=root state=link
       notify:
