--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "tv4": "~1.0.15"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-mocha-test": "~0.8.1",
-    "blanket": "~1.1.6",
-    "supertest": "~0.8.2"
+    "supertest": "~0.8.2",
+    "gulp": "~3.6.0",
+    "gulp-mocha": "~0.4.1",
+    "gulp-jshint": "~1.5.1",
+    "gulp-util": "~2.2.14"
   }
 }
