--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -23,8 +23,8 @@
     - name: Install Node.js
       shell: wget http://nodejs.org/dist/v0.10.24/node-v0.10.24-linux-x64.tar.gz -O - | tar -C /usr/local --strip-components 1 -xzf -
                creates=/usr/local/bin/node
-    - name: Install grunt-cli
-      npm: name=grunt-cli global=yes version=0.1.11
+    - name: Install gulp
+      npm: name=gulp global=yes version=3.6.0
     - name: Install NPM dependencies
       npm: path=/vagrant
   handlers:
