--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -23,6 +23,12 @@
     - name: Install Node.js
       shell: wget http://nodejs.org/dist/v0.10.24/node-v0.10.24-linux-x64.tar.gz -O - | tar -C /usr/local --strip-components 1 -xzf -
                creates=/usr/local/bin/node
+    - name: Install git
+      apt: pkg=git-core
+    - name: Install bower
+      npm: name=bower global=yes version=1.3.2
+    - name: Install Bower dependencies
+      command: /usr/local/bin/bower install --allow-root chdir=/vagrant
     - name: Install gulp
       npm: name=gulp global=yes version=3.6.0
     - name: Install NPM dependencies
