--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Jeffrey Charles <jeffreycharles@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "express": "~3.4.7",
+    "body-parser": "~1.0.2",
+    "errorhandler": "~1.0.0",
+    "express": "~4.0.0",
+    "morgan": "~1.0.0",
     "tv4": "~1.0.15"
   },
   "devDependencies": {
