--- a/.jshintrc
+++ b/.jshintrc
@@ -3,6 +3,7 @@
     "camelcase": true,
     "curly": true,
     "freeze": true,
+    "globalstrict": true,
     "indent": 4,
     "latedef": true,
     "newcap": true,
@@ -12,6 +13,7 @@
     "quotmark": "single",
     "undef": true,
     "unused": true,
+    "strict": true,
     "trailing": true,
     "maxlen": 80
 }
