Use jQuery UI sortable for drag-and-drop

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-uuid4": "~0.0.3"
+    "angular-uuid4": "~0.0.3",
+    "angular-ui-sortable": "~0.12.6"
   }
 }
