Use container linking for API container

--- a/ui/nginx.conf
+++ b/ui/nginx.conf
@@ -22,7 +22,7 @@ http {
         sendfile off;
 
         location / {
-            proxy_pass http://172.17.42.1:3000;
+            proxy_pass http://api:3000;
             proxy_set_header Host $http_host;
         }
 
