--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,4 +2,4 @@ FROM node:0.10.28
 MAINTAINER Jeffrey Charles <jeffreycharles@gmail.com>
 
 EXPOSE 3000
-CMD ["node", "run-app.js"]
+CMD ["node", "src/run-app.js"]
