Move routing into its own container

--- a/routing/nginx.conf
+++ b/routing/nginx.conf
@@ -5,23 +5,23 @@ events {
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
     keepalive_timeout  65;
 
     server {
         listen 80;
 
-        root /vagrant/ui;
-        index index.html;
-
-        server_name localhost;
-
         # Having sendfile enabled sometimes causes files to get truncated on
         # VirtualBox
         sendfile off;
 
+        location / {
+            proxy_pass http://api:3000;
+            proxy_set_header Host $http_host;
+        }
+
         location /static/ {
+            proxy_pass http://ui;
+            proxy_set_header Host $http_host;
         }
     }
 }
