--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -36,6 +36,11 @@
     - name: Build UI docker image
       docker_image: path=/vagrant/ui name=poleland-ui state=present
     - name: Run UI docker container
-      docker: image=poleland-ui name=poleland-ui-container ports=80:80
-                links=poleland-api-container:api
+      docker: image=poleland-ui name=poleland-ui-container
                 volumes=/vagrant/ui:/vagrant/ui state=running
+    - name: Build routing docker image
+      docker_image: path=/vagrant/routing name=poleland-routing state=present
+    - name: Run routing docker image
+      docker: image=poleland-routing name=poleland-routing-container ports=80:80
+                links=poleland-api-container:api,poleland-ui-container:ui
+                volumes=/vagrant/routing:/vagrant/routing state=running
