--- a/routing/nginx.conf
+++ b/routing/nginx.conf
@@ -14,12 +14,12 @@ http {
         # VirtualBox
         sendfile off;
 
-        location / {
+        location /api {
             proxy_pass http://api:3000;
             proxy_set_header Host $http_host;
         }
 
-        location /static/ {
+        location / {
             proxy_pass http://ui;
             proxy_set_header Host $http_host;
         }
