--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -10,11 +10,13 @@
       apt: pkg=git-core
     - name: Install bower
       npm: name=bower global=yes version=1.3.2
+    - name: Install NPM dependencies for UI
+      npm: path=/vagrant/ui
     - name: Install Bower dependencies
       command: /usr/local/bin/bower install --allow-root chdir=/vagrant/ui
     - name: Install gulp
       npm: name=gulp global=yes version=3.6.0
-    - name: Install NPM dependencies
+    - name: Install NPM dependencies for API
       npm: path=/vagrant/api
     - name: Install apt-transport-https
       apt: pkg=apt-transport-https
