--- a/provisioning/couchbase-playbook.yml
+++ b/provisioning/couchbase-playbook.yml
@@ -13,3 +13,11 @@
     - name: Install Couchbase deb
       command: /usr/bin/dpkg -i ~/couchbase-server-community_2.2.0_x86_64.deb
       when: couchbase_check.rc == 1
+    - name: Check cluster
+      command: /opt/couchbase/bin/couchbase-cli server-list -c 127.0.0.1:8091 -u {{ admin_user }} -p {{ admin_password }}
+      register: cluster_check
+      failed_when: "cluster_check.rc not in (0, 1)"
+      changed_when: False
+    - name: Configure cluster
+      command: /opt/couchbase/bin/couchbase-cli cluster-init -c 127.0.0.1:8091 --cluster-init-username={{ admin_user }} --cluster-init-password={{ admin_password }} --cluster-init-port=8091 --cluster-init-ramsize=294
+      when: cluster_check.rc == 1
