--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "license": "BSD",
   "dependencies": {
     "body-parser": "~1.0.2",
+    "couchbase": "^1.2.4",
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
     "morgan": "~1.0.0",
