--- a/api/package.json
+++ b/api/package.json
@@ -10,17 +10,19 @@
   "license": "BSD",
   "dependencies": {
     "body-parser": "~1.0.2",
+    "btoa": "^1.1.2",
     "couchbase": "^1.2.4",
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
     "morgan": "~1.0.0",
+    "node-uuid": "^1.4.1",
     "tv4": "~1.0.15"
   },
   "devDependencies": {
-    "supertest": "~0.11.0",
-    "gulp": "~3.6.0",
-    "gulp-mocha": "~0.4.1",
-    "gulp-jshint": "~1.5.1",
-    "gulp-util": "~2.2.14"
+    "supertest": "~0.13.0",
+    "gulp": "~3.8.6",
+    "gulp-mocha": "~0.5.2",
+    "gulp-jshint": "~1.8.0",
+    "gulp-util": "~2.2.20"
   }
 }
