--- a/api/package.json
+++ b/api/package.json
@@ -9,20 +9,19 @@
   "author": "Jeffrey Charles <jeffreycharles@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "body-parser": "~1.0.2",
+    "body-parser": "~1.5.2",
     "btoa": "^1.1.2",
     "couchbase": "^1.2.4",
-    "errorhandler": "~1.0.0",
-    "express": "~4.0.0",
-    "morgan": "~1.0.0",
+    "errorhandler": "~1.1.1",
+    "express": "~4.7.2",
+    "morgan": "~1.2.2",
     "node-uuid": "^1.4.1",
-    "tv4": "~1.0.15"
+    "tv4": "~1.1.0"
   },
   "devDependencies": {
     "supertest": "~0.13.0",
     "gulp": "~3.8.6",
     "gulp-mocha": "~0.5.2",
-    "gulp-jshint": "~1.8.0",
-    "gulp-util": "~2.2.20"
+    "gulp-jshint": "~1.8.0"
   }
 }
