--- a/provisioning/site.yml
+++ b/provisioning/site.yml
@@ -14,16 +14,13 @@
         - { n: bower, v: 1.3.12 }
         - { n: gulp, v: 3.6.0 }
 
-    - name: Install NPM dependencies for UI
-      npm: path=/vagrant/ui
+    - name: Install NPM dependencies
+      npm: path=/vagrant
 
     - name: Install Bower dependencies
-      command: /usr/local/bin/bower install --allow-root chdir=/vagrant/ui
+      command: /usr/local/bin/bower install --allow-root chdir=/vagrant
       register: bower
       changed_when: bower.stdout != ''
-
-    - name: Install NPM dependencies for API
-      npm: path=/vagrant/api
 
     - name: Install apt-transport-https for Docker
       apt: pkg=apt-transport-https
@@ -44,12 +41,8 @@
     - name: Install docker-py
       pip: name=docker-py version=0.3.1
 
-    - name: Build docker images
-      docker_image: path={{ item.path }} name={{ item.name }} state=present
-      with_items:
-        - { path: /vagrant/api, name: poleland-api }
-        - { path: /vagrant/ui, name: poleland-ui }
-        - { path: /vagrant/routing, name: poleland-routing }
+    - name: Build docker image
+      docker_image: path=/vagrant name=poleland state=present
 
     - name: Run local DynamoDB docker image
       docker: image=fitz/dynamodb-local name=dynamodb command='-port 8000'
@@ -74,14 +67,14 @@
                     insertafter=EOF state=present
 
     - name: Create tables in DynamoDB
-      command: /vagrant/api/dynamodb-setup/create-tables.js
+      command: /vagrant/dynamodb-setup/create-tables.js
       register: dynamodb_tables
       changed_when: dynamodb_tables.stdout != ''
       environment:
         DYNAMO_DB_PREFIX: dev
 
     - name: Add test data to DynamoDB
-      command: /vagrant/api/dynamodb-setup/add-test-data.js
+      command: /vagrant/dynamodb-setup/add-test-data.js
       register: dynamodb_data
       changed_when: dynamodb_data.stdout != ''
       environment:
@@ -92,17 +85,9 @@
       register: docker_bridge
       changed_when: False
 
-    - name: Run API docker image
-      docker: image=poleland-api name=poleland-api-container
-                volumes='/vagrant/api:/usr/src/node'
+    - name: Run docker image
+      docker: image=poleland name=poleland
+                volumes='/vagrant:/usr/src/node'
+                ports='80:80'
                 env='AWS_ACCESS_KEY_ID={{ aws_access_key_id }},AWS_SECRET_ACCESS_KEY={{ aws_secret_access_key }},DYNAMO_DB_URL=http://{{ docker_bridge.stdout }}:8000,DYNAMO_DB_PREFIX=dev'
                 state=running
-
-    - name: Run UI docker image
-      docker: image=poleland-ui name=poleland-ui-container
-                volumes='/vagrant/ui:/vagrant/ui' state=running
-
-    - name: Run routing docker image
-      docker: image=poleland-routing name=poleland-routing-container ports=80:80
-                links=poleland-api-container:api,poleland-ui-container:ui
-                volumes=/vagrant/routing:/vagrant/routing state=running
