--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "verror": "1.4.0"
   },
   "devDependencies": {
-    "supertest": "0.14.0",
     "gulp": "3.8.9",
+    "gulp-jshint": "1.8.6",
     "gulp-mocha": "1.1.1",
-    "gulp-jshint": "1.8.6"
+    "supertest": "0.14.0",
+    "supertest-as-promised": "1.0.0"
   }
 }
