--- a/.jshintrc
+++ b/.jshintrc
@@ -5,7 +5,7 @@
     "freeze": true,
     "globalstrict": true,
     "indent": 4,
-    "latedef": true,
+    "latedef": "nofunc",
     "newcap": true,
     "noarg": true,
     "noempty": true,
