--- a/package.json
+++ b/package.json
@@ -6,28 +6,44 @@
   "scripts": {
     "start": "forever --minUptime 1000 -w --watchDirectory src src/run-app.js",
     "test": "gulp",
-    "debug": "node debug src/run-app.js"
+    "debug": "node debug src/run-app.js",
+    "dev": "npm start & gulp watch"
   },
   "author": "Jeffrey Charles <jeffreycharles@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "aws-sdk": "2.0.23",
-    "bluebird": "2.3.11",
-    "body-parser": "1.9.2",
-    "btoa": "1.1.2",
+    "aws-sdk": "^2.0.23",
+    "bluebird": "^2.3.11",
+    "body-parser": "^1.9.2",
+    "bootstrap": "^3.3.1",
+    "btoa": "^1.1.2",
     "dynamodb-doc": "git://github.com/awslabs/dynamodb-document-js-sdk.git#4ee5768d3ec3fc036122d999f9e6749bba923d8c",
-    "errorhandler": "1.2.2",
-    "express": "4.10.1",
-    "forever": "0.13.0",
-    "morgan": "1.4.1",
-    "node-uuid": "1.4.1",
-    "tv4": "1.1.4"
+    "errorhandler": "^1.2.2",
+    "express": "^4.10.1",
+    "forever": "^0.13.0",
+    "gulp-less": "^2.0.1",
+    "jquery": "^2.1.3",
+    "lodash": "^2.4.1",
+    "morgan": "^1.4.1",
+    "node-uuid": "^1.4.1",
+    "page": "^1.5.0",
+    "react": "^0.12.2",
+    "reflux": "^0.2.4",
+    "tv4": "^1.1.4",
+    "url-template": "^2.0.4"
   },
   "devDependencies": {
-    "gulp": "3.8.9",
-    "gulp-jshint": "1.8.6",
-    "gulp-mocha": "1.1.1",
-    "supertest": "0.14.0",
-    "supertest-as-promised": "1.0.0"
+    "del": "^1.1.0",
+    "gulp": "^3.8.9",
+    "gulp-htmlmin": "^0.2.0",
+    "gulp-jshint": "^1.8.6",
+    "gulp-mocha": "^1.1.1",
+    "gulp-util": "^3.0.1",
+    "gulp-webpack": "^1.1.2",
+    "jsx-loader": "^0.12.2",
+    "supertest": "^0.14.0",
+    "supertest-as-promised": "^1.0.0",
+    "webpack": "^1.4.15",
+    "webpack-dev-server": "^1.7.0"
   }
 }
